# devtools-course-practice

modules/complex-number/test/: test_ivlev_andrey_complex_number.cpp  test_trenina_elizaveta_complex_number.cpp
modules/line_plane_intersection/include/: line_plane_intersection.h
modules/line_plane_intersection/src/: line_plane_intersection.cpp
modules/line_plane_intersection/test/: test_aksenov_nikita_line_plane_intersection.cpp  test_main.cpp
modules/scopeguard/: CMakeLists.txt
modules/scopeguard/application/: CMakeLists.txt  client.cpp  server.cpp
modules/scopeguard/include/: scopeguard.hxx
modules/scopeguard/test/: CMakeLists.txt  test_main.cpp  test_scopeguard.cpp
